--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="C:\Users\jehte\bootcamp\Mini-Project\assets\style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
   <title>Space Travel</title>
 </head>
 
